Made Structure Preview display directly in the Inventory